--- a/solution/Dimas/Dimas/Dimas.csproj
+++ b/solution/Dimas/Dimas/Dimas.csproj
@@ -20,4 +20,9 @@
     <None Include="wwwroot\images\wedding_location.jpg" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <DotNetCliToolReference Include="Amazon.ElasticBeanstalk.Tools" Version="1.1.0" />
+  </ItemGroup>
 </Project>
+
